02-canary-cookie/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  labels:
    app: demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10" # optional in this scenario, we can use both canary strategies by weight and cookie at the same time
    nginx.ingress.kubernetes.io/canary-by-cookie: "canary-cookie" # v2 will be served always when "canary-cookie=always"
spec:
  #ingressClassName: nginx 
  rules:
    - host: demo.local
      http:
        paths:
        - pathType: ImplementationSpecific
          path: "/"
          backend:
            service:
              name: demo-v2
              port:
                name: http
